--- a/portfolio/assets/projects-css/assign6.css
+++ b/portfolio/assets/projects-css/assign6.css
@@ -1,6 +1,6 @@
 body{
     background-color: black;
-    background-image: url(/assets/image/Gemini_Generated_Image_yhzk20yhzk20yhzk.png);
+    background-image: url(../project-image/Gemini_Generated_Image_yhzk20yhzk20yhzk.png);
     background-size: cover;        
   background-position: center;   
   background-repeat: no-repeat;
